keycloak_realm_migration.yaml
---
kind: Pod
metadata:
  name: keycloak-export-viewer
  namespace: keycloak
spec:
  containers:
  - name: viewer
    image: alpine:latest
    command: ["/bin/sh", "-c", "sleep infinity"]
    volumeMounts:
    - name: export-data
      mountPath: /data
  volumes:
  - name: export-data
    persistentVolumeClaim:
      claimName: keycloak-export-pvc
