ispn-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinispan-console-ingress
  namespace: my-keycloak-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
      #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      #nginx.ingress.kubernetes.io/proxy-set-headers: "true"
      #nginx.ingress.kubernetes.io/upstream-vhost: $host
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: infinispan.alex.mn  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infinispan-prod
            port:
              number: 11222
